--- a/ui/configuration.ui
+++ b/ui/configuration.ui
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
+ <author>Piero Proietti</author>
  <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
@@ -13,13 +14,13 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>20</y>
-     <width>284</width>
-     <height>192</height>
+     <width>381</width>
+     <height>198</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
@@ -83,8 +84,8 @@
     <item row="5" column="1">
      <widget class="QLineEdit" name="lineEditRootPasswd"/>
     </item>
-    <item row="6" column="0">
-     <widget class="QLabel" name="label_make_md5sum">
+    <item row="6" column="1">
+     <widget class="QCheckBox" name="checkBoxMakeMd5sum">
       <property name="text">
        <string>make_md5sum</string>
       </property>
