--- a/ui/produce.ui
+++ b/ui/produce.ui
@@ -172,6 +172,19 @@
     </item>
    </layout>
   </widget>
+  <widget class="QPushButton" name="pushButtonGenerate">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>390</y>
+     <width>431</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>generate</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections>
