--- a/ui/produce.ui
+++ b/ui/produce.ui
@@ -10,8 +10,23 @@
     <height>480</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>640</width>
+    <height>480</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>640</width>
+    <height>480</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Dialog</string>
+  </property>
+  <property name="locale">
+   <locale language="English" country="UnitedStates"/>
   </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
@@ -75,44 +90,33 @@
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
-     <widget class="QLabel" name="labelAddons">
-      <property name="text">
-       <string>Addons</string>
-      </property>
-     </widget>
+    <item row="3" column="1" colspan="2">
+     <widget class="QComboBox" name="comboBoxFilters"/>
+    </item>
+    <item row="0" column="1" colspan="2">
+     <widget class="QComboBox" name="comboBoxAddons"/>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="labelPrefix">
+      <property name="toolTip">
+       <string>Imposes a prefix to the name of the created ISO image, default is egg-of_ ID and Codename, for example: egg-of_debian-bookworm-</string>
+      </property>
       <property name="text">
        <string>Prefix</string>
       </property>
      </widget>
     </item>
-    <item row="1" column="1" colspan="2">
-     <widget class="QLineEdit" name="lineEditPrefix"/>
-    </item>
-    <item row="2" column="0">
-     <widget class="QLabel" name="labelBasename">
+    <item row="6" column="0">
+     <widget class="QCheckBox" name="checkBoxClone">
       <property name="text">
-       <string>Basename</string>
+       <string>Clone</string>
       </property>
      </widget>
     </item>
-    <item row="2" column="1" colspan="2">
-     <widget class="QLineEdit" name="lineEditBasename"/>
-    </item>
-    <item row="3" column="0">
-     <widget class="QLabel" name="labelFilters">
+    <item row="10" column="0">
+     <widget class="QCheckBox" name="checkBoxYolk">
       <property name="text">
-       <string>Filters</string>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="0">
-     <widget class="QLabel" name="labelCompression">
-      <property name="text">
-       <string>Compression</string>
+       <string>Yolk</string>
       </property>
      </widget>
     </item>
@@ -123,20 +127,53 @@
       </property>
      </widget>
     </item>
-    <item row="5" column="1" colspan="2">
-     <widget class="QComboBox" name="comboBoxTheme"/>
-    </item>
-    <item row="6" column="0">
-     <widget class="QCheckBox" name="checkBoxClone">
-      <property name="text">
-       <string>Clone</string>
-      </property>
-     </widget>
-    </item>
     <item row="7" column="0" colspan="2">
      <widget class="QCheckBox" name="checkBoxCryptedClone">
       <property name="text">
        <string>Crypted Clone</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1" colspan="2">
+     <widget class="QLineEdit" name="lineEditPrefix"/>
+    </item>
+    <item row="5" column="1" colspan="2">
+     <widget class="QComboBox" name="comboBoxTheme"/>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="labelBasename">
+      <property name="text">
+       <string>Basename</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="labelFilters">
+      <property name="text">
+       <string>Filters</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="1" colspan="2">
+     <widget class="QComboBox" name="comboBoxCompression"/>
+    </item>
+    <item row="4" column="0">
+     <widget class="QLabel" name="labelCompression">
+      <property name="text">
+       <string>Compression</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1" colspan="2">
+     <widget class="QLineEdit" name="lineEditBasename"/>
+    </item>
+    <item row="0" column="0">
+     <widget class="QLabel" name="labelAddons">
+      <property name="toolTip">
+       <string>configures the addon and creates a link to the selected one on the desktop</string>
+      </property>
+      <property name="text">
+       <string>Addons</string>
       </property>
      </widget>
     </item>
@@ -152,23 +189,10 @@
       <property name="text">
        <string>Unsecure</string>
       </property>
-     </widget>
-    </item>
-    <item row="10" column="0">
-     <widget class="QCheckBox" name="checkBoxUnsecure_2">
-      <property name="text">
-       <string>Yolk</string>
+      <property name="tristate">
+       <bool>false</bool>
       </property>
      </widget>
-    </item>
-    <item row="0" column="1" colspan="2">
-     <widget class="QComboBox" name="comboBoxAddons"/>
-    </item>
-    <item row="3" column="1" colspan="2">
-     <widget class="QComboBox" name="comboBoxFilters"/>
-    </item>
-    <item row="4" column="1" colspan="2">
-     <widget class="QComboBox" name="comboBoxCompression"/>
     </item>
    </layout>
   </widget>
