--- a/src/ui/produce.ui
+++ b/src/ui/produce.ui
@@ -106,7 +106,7 @@
     <string>generate</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
