a bit dirthy work, but now dialog work as dialog

--- a/src/ui/config.ui
+++ b/src/ui/config.ui
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <author>Piero Proietti</author>
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>DialogConfig</class>
+ <widget class="QDialog" name="DialogConfig">
   <property name="geometry">
    <rect>
     <x>0</x>
