--- a/src/ui/produce.ui
+++ b/src/ui/produce.ui
@@ -69,7 +69,7 @@
     <rect>
      <x>110</x>
      <y>360</y>
-     <width>411</width>
+     <width>521</width>
      <height>23</height>
     </rect>
    </property>
@@ -77,9 +77,9 @@
   <widget class="QPushButton" name="pushButtonRun">
    <property name="geometry">
     <rect>
-     <x>550</x>
-     <y>350</y>
-     <width>83</width>
+     <x>300</x>
+     <y>390</y>
+     <width>151</width>
      <height>71</height>
     </rect>
    </property>
@@ -87,23 +87,23 @@
     <string>run or copy ib ckuobiard the generated command</string>
    </property>
    <property name="text">
-    <string>run/copy</string>
+    <string>&amp;Run</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButtonGenerate">
    <property name="geometry">
     <rect>
-     <x>110</x>
+     <x>160</x>
      <y>390</y>
-     <width>431</width>
-     <height>31</height>
+     <width>131</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="toolTip">
     <string>generate the command</string>
    </property>
    <property name="text">
-    <string>generate</string>
+    <string>&amp;Generate</string>
    </property>
   </widget>
   <widget class="QWidget" name="layoutWidget">
@@ -272,6 +272,22 @@
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QPushButton" name="pushButtonHelp">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>390</y>
+     <width>141</width>
+     <height>71</height>
+    </rect>
+   </property>
+   <property name="toolTip">
+    <string>run or copy ib ckuobiard the generated command</string>
+   </property>
+   <property name="text">
+    <string>&amp;Help</string>
+   </property>
   </widget>
  </widget>
  <resources>
